# Aleph-One-Marathon-Trilogy-PsVita-

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  cmake_install.cmake  configure.ac  configure~  param.sfo
Source_Files/: main.cpp  shell.cpp  vita_init.c
Source_Files/CSeries/: csalerts_sdl.cpp  cseries.h  csmisc_sdl.cpp  cspaths_sdl.cpp
Source_Files/Lua/: lauxlib.c
Source_Files/Misc/: ScenarioChooser.cpp  interface.cpp  preferences.cpp
Source_Files/RenderOther/: HUDRenderer_Lua.cpp  Image_Blitter.cpp  ViewControl.cpp  images.cpp  screen.cpp
Source_Files/Sound/: OpenALManager.cpp  SoundManager.cpp
alephone-vita/sce_sys/: param.sfo
cmake-build/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  test_boost.velf  test_noboost.velf  test_noboost2.velf
vpk-folder/sce_sys/: param.sfo
