cmake_minimum_required(VERSION 3.10)
project(AlephOne)
include("$ENV{VITASDK}/share/vita.cmake" REQUIRED)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D__vita__ -DHAVE_CONFIG_H -O3 -mcpu=cortex-a9 -mfpu=neon -Wno-error -Wno-narrowing")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -D__vita__ -DHAVE_CONFIG_H -O3 -mcpu=cortex-a9 -mfpu=neon")

include_directories(
    ..
    $ENV{VITASDK}/arm-vita-eabi/include
    $ENV{VITASDK}/arm-vita-eabi/include/SDL2
    $ENV{VITASDK}/arm-vita-eabi/include/AL
    ../Source_Files
    ../Source_Files/CSeries
    ../Source_Files/Files
    ../Source_Files/GameWorld
    ../Source_Files/Input
    ../Source_Files/Lua
    ../Source_Files/Misc
    ../Source_Files/ModelView
    ../Source_Files/Network
    ../Source_Files/Network/Metaserver
    ../Source_Files/RenderMain
    ../Source_Files/RenderOther
    ../Source_Files/Sound
    ../Source_Files/XML
    ../Source_Files/TCPMess
    ../Source_Files/Videos
)

add_executable(alephone
    ../Source_Files/vita_init.c
    ../Source_Files/shell.cpp
    ../Source_Files/shell_misc.cpp
    ../Source_Files/shell_options.cpp
    ../Source_Files/main.cpp
    ../Source_Files/CSeries/BStream.cpp
    ../Source_Files/CSeries/FilmProfile.cpp
    ../Source_Files/CSeries/byte_swapping.cpp
    ../Source_Files/CSeries/csalerts_sdl.cpp
    ../Source_Files/CSeries/cscluts_sdl.cpp
    ../Source_Files/CSeries/csdialogs_sdl.cpp
    ../Source_Files/CSeries/csmisc_sdl.cpp
    ../Source_Files/CSeries/cspaths_sdl.cpp
    ../Source_Files/CSeries/csstrings.cpp
    ../Source_Files/CSeries/mytm_sdl.cpp
    ../Source_Files/Files/AStream.cpp
    ../Source_Files/Files/FileHandler.cpp
    ../Source_Files/Files/Packing.cpp
    ../Source_Files/Files/SDL_rwops_ostream.cpp
    ../Source_Files/Files/WadImageCache.cpp
    ../Source_Files/Files/crc.cpp
    ../Source_Files/Files/find_files_sdl.cpp
    ../Source_Files/Files/game_wad.cpp
    ../Source_Files/Files/import_definitions.cpp
    ../Source_Files/Files/preprocess_map_sdl.cpp
    ../Source_Files/Files/preprocess_map_shared.cpp
    ../Source_Files/Files/resource_manager.cpp
    ../Source_Files/Files/wad.cpp
    ../Source_Files/Files/wad_prefs.cpp
    ../Source_Files/Files/wad_sdl.cpp
    ../Source_Files/GameWorld/devices.cpp
    ../Source_Files/GameWorld/dynamic_limits.cpp
    ../Source_Files/GameWorld/effects.cpp
    ../Source_Files/GameWorld/ephemera.cpp
    ../Source_Files/GameWorld/flood_map.cpp
    ../Source_Files/GameWorld/interpolated_world.cpp
    ../Source_Files/GameWorld/items.cpp
    ../Source_Files/GameWorld/lightsource.cpp
    ../Source_Files/GameWorld/map.cpp
    ../Source_Files/GameWorld/map_constructors.cpp
    ../Source_Files/GameWorld/marathon2.cpp
    ../Source_Files/GameWorld/media.cpp
    ../Source_Files/GameWorld/monsters.cpp
    ../Source_Files/GameWorld/pathfinding.cpp
    ../Source_Files/GameWorld/physics.cpp
    ../Source_Files/GameWorld/placement.cpp
    ../Source_Files/GameWorld/platforms.cpp
    ../Source_Files/GameWorld/player.cpp
    ../Source_Files/GameWorld/projectiles.cpp
    ../Source_Files/GameWorld/scenery.cpp
    ../Source_Files/GameWorld/weapons.cpp
    ../Source_Files/GameWorld/world.cpp
    ../Source_Files/Input/joystick_sdl.cpp
    ../Source_Files/Input/mouse_sdl.cpp
    ../Source_Files/Lua/lapi.c
    ../Source_Files/Lua/lauxlib.c
    ../Source_Files/Lua/lbaselib.c
    ../Source_Files/Lua/lbitlib.c
    ../Source_Files/Lua/lcode.c
    ../Source_Files/Lua/lctype.c
    ../Source_Files/Lua/ldblib.c
    ../Source_Files/Lua/ldebug.c
    ../Source_Files/Lua/ldo.c
    ../Source_Files/Lua/ldump.c
    ../Source_Files/Lua/lfunc.c
    ../Source_Files/Lua/lgc.c
    ../Source_Files/Lua/linit.c
    ../Source_Files/Lua/liolib.c
    ../Source_Files/Lua/llex.c
    ../Source_Files/Lua/lmathlib.c
    ../Source_Files/Lua/lmem.c
    ../Source_Files/Lua/lobject.c
    ../Source_Files/Lua/lopcodes.c
    ../Source_Files/Lua/loslib.c
    ../Source_Files/Lua/lparser.c
    ../Source_Files/Lua/lstate.c
    ../Source_Files/Lua/lstring.c
    ../Source_Files/Lua/lstrlib.c
    ../Source_Files/Lua/ltable.c
    ../Source_Files/Lua/ltablib.c
    ../Source_Files/Lua/ltm.c
    ../Source_Files/Lua/lua_ephemera.cpp
    ../Source_Files/Lua/lua_hud_objects.cpp
    ../Source_Files/Lua/lua_hud_script.cpp
    ../Source_Files/Lua/lua_map.cpp
    ../Source_Files/Lua/lua_monsters.cpp
    ../Source_Files/Lua/lua_music.cpp
    ../Source_Files/Lua/lua_objects.cpp
    ../Source_Files/Lua/lua_player.cpp
    ../Source_Files/Lua/lua_projectiles.cpp
    ../Source_Files/Lua/lua_saved_objects.cpp
    ../Source_Files/Lua/lua_script.cpp
    ../Source_Files/Lua/lua_serialize.cpp
    ../Source_Files/Lua/lundump.c
    ../Source_Files/Lua/lvm.c
    ../Source_Files/Lua/lzio.c
    ../Source_Files/Misc/ActionQueues.cpp
    ../Source_Files/Misc/CircularByteBuffer.cpp
    ../Source_Files/Misc/Console.cpp
    ../Source_Files/Misc/DefaultStringSets.cpp
    ../Source_Files/Misc/Logging.cpp
    ../Source_Files/Misc/PlayerImage_sdl.cpp
    ../Source_Files/Misc/PlayerName.cpp
    ../Source_Files/Misc/Scenario.cpp
    ../Source_Files/Misc/ScenarioChooser.cpp
    ../Source_Files/Misc/Statistics.cpp
    ../Source_Files/Misc/achievements.cpp
    ../Source_Files/Misc/game_errors.cpp
    ../Source_Files/Misc/interface.cpp
    ../Source_Files/Misc/preference_dialogs.cpp
    ../Source_Files/Misc/preferences.cpp
    ../Source_Files/Misc/preferences_widgets_sdl.cpp
    ../Source_Files/Misc/sdl_dialogs.cpp
    ../Source_Files/Misc/sdl_widgets.cpp
    ../Source_Files/Misc/shared_widgets.cpp
    ../Source_Files/Misc/thread_priority_sdl_posix.cpp
    ../Source_Files/Misc/vbl.cpp
    ../Source_Files/ModelView/Dim3_Loader.cpp
    ../Source_Files/ModelView/Model3D.cpp
    ../Source_Files/ModelView/ModelRenderer.cpp
    ../Source_Files/ModelView/StudioLoader.cpp
    ../Source_Files/ModelView/WavefrontLoader.cpp
    ../Source_Files/Network/ConnectPool.cpp
    ../Source_Files/Network/Update.cpp
    ../Source_Files/Network/HTTP.cpp
    ../Source_Files/Network/Metaserver/SdlMetaserverClientUi.cpp
    ../Source_Files/Network/Metaserver/metaserver_dialogs.cpp
    ../Source_Files/Network/Metaserver/metaserver_messages.cpp
    ../Source_Files/Network/Metaserver/network_metaserver.cpp
    ../Source_Files/Network/NetworkInterface.cpp
    ../Source_Files/Network/Pinger.cpp
    ../Source_Files/Network/SSLP_limited.cpp
    ../Source_Files/Network/StarGameProtocol.cpp
    ../Source_Files/Network/network.cpp
    ../Source_Files/Network/network_capabilities.cpp
    ../Source_Files/Network/network_dialog_widgets_sdl.cpp
    ../Source_Files/Network/network_dialogs.cpp
    ../Source_Files/Network/network_dummy.cpp
    ../Source_Files/Network/network_games.cpp
    ../Source_Files/Network/network_messages.cpp
    ../Source_Files/Network/network_star_hub.cpp
    ../Source_Files/Network/network_star_spoke.cpp
    ../Source_Files/Network/network_udp.cpp
    ../Source_Files/RenderMain/AnimatedTextures.cpp
    ../Source_Files/RenderMain/Crosshairs_SDL.cpp
    ../Source_Files/RenderMain/ImageLoader_SDL.cpp
    ../Source_Files/RenderMain/ImageLoader_Shared.cpp
    ../Source_Files/RenderMain/OGL_FBO.cpp
    ../Source_Files/RenderMain/OGL_Faders.cpp
    ../Source_Files/RenderMain/OGL_Model_Def.cpp
    ../Source_Files/RenderMain/OGL_Render.cpp
    ../Source_Files/RenderMain/OGL_Setup.cpp
    ../Source_Files/RenderMain/OGL_Shader.cpp
    ../Source_Files/RenderMain/OGL_Subst_Texture_Def.cpp
    ../Source_Files/RenderMain/OGL_Textures.cpp
    ../Source_Files/RenderMain/Rasterizer_Shader.cpp
    ../Source_Files/RenderMain/RenderPlaceObjs.cpp
    ../Source_Files/RenderMain/RenderRasterize.cpp
    ../Source_Files/RenderMain/RenderRasterize_Shader.cpp
    ../Source_Files/RenderMain/RenderSortPoly.cpp
    ../Source_Files/RenderMain/RenderVisTree.cpp
    ../Source_Files/RenderMain/SW_Texture_Extras.cpp
    ../Source_Files/RenderMain/render.cpp
    ../Source_Files/RenderMain/scottish_textures.cpp
    ../Source_Files/RenderMain/shapes.cpp
    ../Source_Files/RenderMain/textures.cpp
    ../Source_Files/RenderOther/ChaseCam.cpp
    ../Source_Files/RenderOther/FontHandler.cpp
    ../Source_Files/RenderOther/HUDRenderer.cpp
    ../Source_Files/RenderOther/HUDRenderer_Lua.cpp
    ../Source_Files/RenderOther/HUDRenderer_OGL.cpp
    ../Source_Files/RenderOther/HUDRenderer_SW.cpp
    ../Source_Files/RenderOther/Image_Blitter.cpp
    ../Source_Files/RenderOther/OGL_Blitter.cpp
    ../Source_Files/RenderOther/OGL_LoadScreen.cpp
    ../Source_Files/RenderOther/OverheadMapRenderer.cpp
    ../Source_Files/RenderOther/OverheadMap_OGL.cpp
    ../Source_Files/RenderOther/OverheadMap_SDL.cpp
    ../Source_Files/RenderOther/Shape_Blitter.cpp
    ../Source_Files/RenderOther/TextLayoutHelper.cpp
    ../Source_Files/RenderOther/TextStrings.cpp
    ../Source_Files/RenderOther/ViewControl.cpp
    ../Source_Files/RenderOther/computer_interface.cpp
    ../Source_Files/RenderOther/fades.cpp
    ../Source_Files/RenderOther/game_window.cpp
    ../Source_Files/RenderOther/images.cpp
    ../Source_Files/RenderOther/motion_sensor.cpp
    ../Source_Files/RenderOther/overhead_map.cpp
    ../Source_Files/RenderOther/screen.cpp
    ../Source_Files/RenderOther/screen_drawing.cpp
    ../Source_Files/RenderOther/sdl_fonts.cpp
    ../Source_Files/RenderOther/sdl_resize.cpp
    ../Source_Files/Sound/AudioPlayer.cpp
    ../Source_Files/Sound/Decoder.cpp
    ../Source_Files/Sound/Music.cpp
    ../Source_Files/Sound/MusicPlayer.cpp
    ../Source_Files/Sound/OpenALManager.cpp
    ../Source_Files/Sound/ReplacementSounds.cpp
    ../Source_Files/Sound/SndfileDecoder.cpp
    ../Source_Files/Sound/SoundFile.cpp
    ../Source_Files/Sound/SoundManager.cpp
    ../Source_Files/Sound/SoundPlayer.cpp
    ../Source_Files/Sound/SoundsPatch.cpp
    ../Source_Files/Sound/StreamPlayer.cpp
    ../Source_Files/TCPMess/CommunicationsChannel.cpp
    ../Source_Files/TCPMess/Message.cpp
    ../Source_Files/TCPMess/MessageInflater.cpp
    ../Source_Files/Videos/Movie.cpp
    ../Source_Files/XML/InfoTree.cpp
    ../Source_Files/XML/Plugins.cpp
    ../Source_Files/XML/QuickSave.cpp
    ../Source_Files/XML/XML_LevelScript.cpp
    ../Source_Files/XML/XML_MakeRoot.cpp
)

target_link_libraries(alephone
    -Wl,--allow-multiple-definition
    -Wl,--start-group
    SDL2_image SDL2 SceKernelDmacMgr_stub
    SceGxm_stub SceDisplay_stub SceCtrl_stub SceAppMgr_stub SceAppUtil_stub
    SceAudio_stub SceAudioIn_stub SceSysmodule_stub SceIofilemgr_stub
    SceCommonDialog_stub SceTouch_stub SceHid_stub SceMotion_stub
    ScePower_stub SceProcessmgr_stub SceLibKernel_stub SceIme_stub
    webpdemux webp sharpyuv openal sndfile mp3lame FLAC opus mpg123
    SDL2_ttf freetype bz2 png16 vorbisenc vorbis ogg z pthread m
    boost_filesystem boost_system stdc++
    -Wl,--end-group
)

vita_create_self(eboot.bin alephone UNSAFE)
vita_create_vpk(alephone-vita.vpk ALPH00001 eboot.bin VERSION "01.00" NAME "Aleph One")
